src/y.output
   0  $accept : programa $end

   1  programa : cabecera_programa bloque_declarativo bloque_ejecutable

   2  cabecera_programa : ID ';'
   3                    | error ';'

   4  bloque_declarativo : sentencias_declarativas

   5  sentencias_declarativas : sentencia_declarativa ';' sentencias_declarativas
   6                          | sentencia_declarativa ';'

   7  sentencia_declarativa : tipo lista_variables
   8                        | tipo FUNC '(' tipo ')' lista_variables
   9                        | sentencia_declarativa_funcion
  10                        | error lista_variables
  11                        | tipo error lista_variables
  12                        | tipo FUNC tipo ')' lista_variables
  13                        | tipo FUNC '(' error ')' lista_variables
  14                        | tipo FUNC '(' tipo lista_variables

  15  sentencia_declarativa_funcion : cabecera_funcion bloque_declarativo_funcion BEGIN bloque_ejecutable_funcion retorno_funcion END
  16                                | cabecera_funcion bloque_declarativo_funcion BEGIN bloque_ejecutable_funcion retorno_funcion postcondicion END

  17  cabecera_funcion : tipo FUNC ID '(' parametro ')'
  18                   | tipo error ID '(' parametro ')'
  19                   | tipo FUNC error '(' parametro ')'
  20                   | tipo FUNC ID '(' error ')'
  21                   | tipo FUNC ID parametro ')'
  22                   | tipo FUNC ID '(' parametro

  23  parametro : tipo ID

  24  bloque_declarativo_funcion : sentencias_declarativas_en_funcion

  25  sentencias_declarativas_en_funcion : sentencia_declarativa_en_funcion ';' sentencias_declarativas_en_funcion
  26                                     | sentencia_declarativa_en_funcion ';'

  27  sentencia_declarativa_en_funcion : tipo lista_variables

  28  retorno_funcion : RETURN '(' expresion_aritmetica ')' ';'
  29                  | RETURN '(' error ')' ';'
  30                  | RETURN '(' expresion_aritmetica ';'
  31                  | RETURN expresion_aritmetica ')' ';'
  32                  | error ';'

  33  postcondicion : POST ':' '(' condicion ')' ';'
  34                | POST ':' '(' error ')' ';'
  35                | POST '(' condicion ')' ';'
  36                | POST condicion ')' ';'
  37                | POST '(' condicion ';'
  38                | error ';'

  39  tipo : ULONG
  40       | DOUBLE

  41  lista_variables : ID ',' lista_variables
  42                  | ID

  43  bloque_ejecutable : BEGIN sentencias_ejecutables END

  44  bloque_ejecutable_funcion : sentencias_ejecutables

  45  sentencias_ejecutables : sentencia_ejecutable sentencias_ejecutables
  46                         | sentencia_ejecutable

  47  sentencia_ejecutable : sentencia_asignacion
  48                       | sentencia_condicional
  49                       | sentencia_imprimir
  50                       | sentencia_iterativa
  51                       | sentencia_try_catch

  52  sentencia_asignacion : ID ASIG expresion_aritmetica ';'
  53                       | ID error ';'

  54  sentencia_llamado_funcion : CALL ID '(' expresion_aritmetica ')'
  55                            | CALL ID '(' error ')' ';'

  56  sentencia_condicional : condicional bloque_ejecutable_condicional ENDIF ';'
  57                        | condicional bloque_ejecutable_condicional else bloque_ejecutable_condicional ENDIF ';'

  58  else : ELSE

  59  condicional : if '(' condicion ')' THEN
  60              | if '(' error ')' THEN
  61              | if '(' condicion THEN
  62              | if condicion ')' THEN
  63              | if '(' condicion ')' error ';'

  64  if : IF

  65  condicion : expresion_booleana operacion_booleana condicion
  66            | expresion_booleana

  67  expresion_booleana : expresion_aritmetica comparador expresion_aritmetica

  68  comparador : COMP_MAYOR_IGUAL
  69             | COMP_MENOR_IGUAL
  70             | COMP_IGUAL
  71             | COMP_DISTINTO
  72             | '<'
  73             | '>'

  74  operacion_booleana : AND
  75                     | OR

  76  bloque_ejecutable_condicional : BEGIN sentencias_ejecutables END
  77                                | sentencia_ejecutable

  78  sentencia_imprimir : print '(' CADENA ')' ';'
  79                     | print '(' error ')' ';'
  80                     | print '(' CADENA ';'
  81                     | print CADENA ')' ';'
  82                     | print error ';'

  83  print : PRINT

  84  sentencia_iterativa : iterativo bloque_ejecutable_iterativo

  85  iterativo : while '(' condicion ')' DO
  86            | while '(' condicion ')' error
  87            | while '(' error ')' DO
  88            | while '(' condicion DO
  89            | while condicion ')' DO

  90  while : WHILE

  91  bloque_ejecutable_iterativo : BEGIN sentencias_ejecutables_iterativas END
  92                              | sentencia_ejecutable_iterativa

  93  sentencias_ejecutables_iterativas : sentencia_ejecutable_iterativa sentencias_ejecutables_iterativas
  94                                    | sentencia_ejecutable_iterativa

  95  sentencia_ejecutable_iterativa : sentencia_asignacion
  96                                 | sentencia_condicional
  97                                 | sentencia_imprimir
  98                                 | sentencia_iterativa
  99                                 | sentencia_try_catch
 100                                 | sentencia_break

 101  sentencia_break : BREAK ';'

 102  sentencia_conversion : DOUBLE '(' expresion_aritmetica ')'
 103                       | DOUBLE '(' error ')'

 104  sentencia_try_catch : bifurcacion_try bloque_ejecutable

 105  bifurcacion_try : try sentencia_ejecutable_con_anidamiento CATCH
 106                  | try sentencia_ejecutable_con_anidamiento error
 107                  | try sentencia_ejecutable_con_anidamiento

 108  try : TRY

 109  sentencia_ejecutable_con_anidamiento : sentencia_asignacion
 110                                       | sentencia_condicional
 111                                       | sentencia_imprimir
 112                                       | sentencia_iterativa

 113  expresion_aritmetica : expresion_aritmetica '+' termino
 114                       | expresion_aritmetica '-' termino
 115                       | termino

 116  termino : termino '*' factor
 117          | termino '/' factor
 118          | factor
 119          | '-' factor

 120  factor : ID
 121         | sentencia_conversion
 122         | sentencia_llamado_funcion
 123         | CTE_ULONG
 124         | CTE_DOUBLE

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	.  error

	programa  goto 3
	cabecera_programa  goto 4


state 1
	cabecera_programa : error . ';'  (3)

	';'  shift 5
	.  error


state 2
	cabecera_programa : ID . ';'  (2)

	';'  shift 6
	.  error


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : cabecera_programa . bloque_declarativo bloque_ejecutable  (1)

	error  shift 7
	ULONG  shift 8
	DOUBLE  shift 9
	.  error

	bloque_declarativo  goto 10
	sentencias_declarativas  goto 11
	sentencia_declarativa  goto 12
	tipo  goto 13
	sentencia_declarativa_funcion  goto 14
	cabecera_funcion  goto 15


state 5
	cabecera_programa : error ';' .  (3)

	.  reduce 3


state 6
	cabecera_programa : ID ';' .  (2)

	.  reduce 2


state 7
	sentencia_declarativa : error . lista_variables  (10)

	ID  shift 16
	.  error

	lista_variables  goto 17


state 8
	tipo : ULONG .  (39)

	.  reduce 39


state 9
	tipo : DOUBLE .  (40)

	.  reduce 40


state 10
	programa : cabecera_programa bloque_declarativo . bloque_ejecutable  (1)

	BEGIN  shift 18
	.  error

	bloque_ejecutable  goto 19


state 11
	bloque_declarativo : sentencias_declarativas .  (4)

	.  reduce 4


state 12
	sentencias_declarativas : sentencia_declarativa . ';' sentencias_declarativas  (5)
	sentencias_declarativas : sentencia_declarativa . ';'  (6)

	';'  shift 20
	.  error


state 13
	sentencia_declarativa : tipo . lista_variables  (7)
	sentencia_declarativa : tipo . FUNC '(' tipo ')' lista_variables  (8)
	sentencia_declarativa : tipo . error lista_variables  (11)
	sentencia_declarativa : tipo . FUNC tipo ')' lista_variables  (12)
	sentencia_declarativa : tipo . FUNC '(' error ')' lista_variables  (13)
	sentencia_declarativa : tipo . FUNC '(' tipo lista_variables  (14)
	cabecera_funcion : tipo . FUNC ID '(' parametro ')'  (17)
	cabecera_funcion : tipo . error ID '(' parametro ')'  (18)
	cabecera_funcion : tipo . FUNC error '(' parametro ')'  (19)
	cabecera_funcion : tipo . FUNC ID '(' error ')'  (20)
	cabecera_funcion : tipo . FUNC ID parametro ')'  (21)
	cabecera_funcion : tipo . FUNC ID '(' parametro  (22)

	error  shift 21
	FUNC  shift 22
	ID  shift 16
	.  error

	lista_variables  goto 23


state 14
	sentencia_declarativa : sentencia_declarativa_funcion .  (9)

	.  reduce 9


state 15
	sentencia_declarativa_funcion : cabecera_funcion . bloque_declarativo_funcion BEGIN bloque_ejecutable_funcion retorno_funcion END  (15)
	sentencia_declarativa_funcion : cabecera_funcion . bloque_declarativo_funcion BEGIN bloque_ejecutable_funcion retorno_funcion postcondicion END  (16)

	ULONG  shift 8
	DOUBLE  shift 9
	.  error

	tipo  goto 24
	bloque_declarativo_funcion  goto 25
	sentencias_declarativas_en_funcion  goto 26
	sentencia_declarativa_en_funcion  goto 27


state 16
	lista_variables : ID . ',' lista_variables  (41)
	lista_variables : ID .  (42)

	','  shift 28
	';'  reduce 42


state 17
	sentencia_declarativa : error lista_variables .  (10)

	.  reduce 10


state 18
	bloque_ejecutable : BEGIN . sentencias_ejecutables END  (43)

	IF  shift 29
	PRINT  shift 30
	WHILE  shift 31
	ID  shift 32
	TRY  shift 33
	.  error

	sentencias_ejecutables  goto 34
	sentencia_ejecutable  goto 35
	sentencia_asignacion  goto 36
	sentencia_condicional  goto 37
	sentencia_imprimir  goto 38
	sentencia_iterativa  goto 39
	sentencia_try_catch  goto 40
	condicional  goto 41
	if  goto 42
	print  goto 43
	iterativo  goto 44
	while  goto 45
	bifurcacion_try  goto 46
	try  goto 47


state 19
	programa : cabecera_programa bloque_declarativo bloque_ejecutable .  (1)

	.  reduce 1


state 20
	sentencias_declarativas : sentencia_declarativa ';' . sentencias_declarativas  (5)
	sentencias_declarativas : sentencia_declarativa ';' .  (6)

	error  shift 7
	ULONG  shift 8
	DOUBLE  shift 9
	BEGIN  reduce 6

	sentencias_declarativas  goto 48
	sentencia_declarativa  goto 12
	tipo  goto 13
	sentencia_declarativa_funcion  goto 14
	cabecera_funcion  goto 15


state 21
	sentencia_declarativa : tipo error . lista_variables  (11)
	cabecera_funcion : tipo error . ID '(' parametro ')'  (18)

	ID  shift 49
	.  error

	lista_variables  goto 50


state 22
	sentencia_declarativa : tipo FUNC . '(' tipo ')' lista_variables  (8)
	sentencia_declarativa : tipo FUNC . tipo ')' lista_variables  (12)
	sentencia_declarativa : tipo FUNC . '(' error ')' lista_variables  (13)
	sentencia_declarativa : tipo FUNC . '(' tipo lista_variables  (14)
	cabecera_funcion : tipo FUNC . ID '(' parametro ')'  (17)
	cabecera_funcion : tipo FUNC . error '(' parametro ')'  (19)
	cabecera_funcion : tipo FUNC . ID '(' error ')'  (20)
	cabecera_funcion : tipo FUNC . ID parametro ')'  (21)
	cabecera_funcion : tipo FUNC . ID '(' parametro  (22)

	error  shift 51
	ULONG  shift 8
	DOUBLE  shift 9
	ID  shift 52
	'('  shift 53
	.  error

	tipo  goto 54


state 23
	sentencia_declarativa : tipo lista_variables .  (7)

	.  reduce 7


state 24
	sentencia_declarativa_en_funcion : tipo . lista_variables  (27)

	ID  shift 16
	.  error

	lista_variables  goto 55


state 25
	sentencia_declarativa_funcion : cabecera_funcion bloque_declarativo_funcion . BEGIN bloque_ejecutable_funcion retorno_funcion END  (15)
	sentencia_declarativa_funcion : cabecera_funcion bloque_declarativo_funcion . BEGIN bloque_ejecutable_funcion retorno_funcion postcondicion END  (16)

	BEGIN  shift 56
	.  error


state 26
	bloque_declarativo_funcion : sentencias_declarativas_en_funcion .  (24)

	.  reduce 24


state 27
	sentencias_declarativas_en_funcion : sentencia_declarativa_en_funcion . ';' sentencias_declarativas_en_funcion  (25)
	sentencias_declarativas_en_funcion : sentencia_declarativa_en_funcion . ';'  (26)

	';'  shift 57
	.  error


state 28
	lista_variables : ID ',' . lista_variables  (41)

	ID  shift 16
	.  error

	lista_variables  goto 58


state 29
	if : IF .  (64)

	.  reduce 64


state 30
	print : PRINT .  (83)

	.  reduce 83


state 31
	while : WHILE .  (90)

	.  reduce 90


state 32
	sentencia_asignacion : ID . ASIG expresion_aritmetica ';'  (52)
	sentencia_asignacion : ID . error ';'  (53)

	error  shift 59
	ASIG  shift 60
	.  error


state 33
	try : TRY .  (108)

	.  reduce 108


state 34
	bloque_ejecutable : BEGIN sentencias_ejecutables . END  (43)

	END  shift 61
	.  error


state 35
	sentencias_ejecutables : sentencia_ejecutable . sentencias_ejecutables  (45)
	sentencias_ejecutables : sentencia_ejecutable .  (46)

	IF  shift 29
	PRINT  shift 30
	WHILE  shift 31
	ID  shift 32
	TRY  shift 33
	error  reduce 46
	RETURN  reduce 46
	END  reduce 46

	sentencias_ejecutables  goto 62
	sentencia_ejecutable  goto 35
	sentencia_asignacion  goto 36
	sentencia_condicional  goto 37
	sentencia_imprimir  goto 38
	sentencia_iterativa  goto 39
	sentencia_try_catch  goto 40
	condicional  goto 41
	if  goto 42
	print  goto 43
	iterativo  goto 44
	while  goto 45
	bifurcacion_try  goto 46
	try  goto 47


state 36
	sentencia_ejecutable : sentencia_asignacion .  (47)

	.  reduce 47


state 37
	sentencia_ejecutable : sentencia_condicional .  (48)

	.  reduce 48


state 38
	sentencia_ejecutable : sentencia_imprimir .  (49)

	.  reduce 49


state 39
	sentencia_ejecutable : sentencia_iterativa .  (50)

	.  reduce 50


state 40
	sentencia_ejecutable : sentencia_try_catch .  (51)

	.  reduce 51


state 41
	sentencia_condicional : condicional . bloque_ejecutable_condicional ENDIF ';'  (56)
	sentencia_condicional : condicional . bloque_ejecutable_condicional else bloque_ejecutable_condicional ENDIF ';'  (57)

	IF  shift 29
	PRINT  shift 30
	BEGIN  shift 63
	WHILE  shift 31
	ID  shift 32
	TRY  shift 33
	.  error

	sentencia_ejecutable  goto 64
	sentencia_asignacion  goto 36
	sentencia_condicional  goto 37
	sentencia_imprimir  goto 38
	sentencia_iterativa  goto 39
	sentencia_try_catch  goto 40
	condicional  goto 41
	bloque_ejecutable_condicional  goto 65
	if  goto 42
	print  goto 43
	iterativo  goto 44
	while  goto 45
	bifurcacion_try  goto 46
	try  goto 47


state 42
	condicional : if . '(' condicion ')' THEN  (59)
	condicional : if . '(' error ')' THEN  (60)
	condicional : if . '(' condicion THEN  (61)
	condicional : if . condicion ')' THEN  (62)
	condicional : if . '(' condicion ')' error ';'  (63)

	DOUBLE  shift 66
	ID  shift 67
	CTE_ULONG  shift 68
	CTE_DOUBLE  shift 69
	CALL  shift 70
	'('  shift 71
	'-'  shift 72
	.  error

	expresion_aritmetica  goto 73
	condicion  goto 74
	sentencia_llamado_funcion  goto 75
	expresion_booleana  goto 76
	sentencia_conversion  goto 77
	termino  goto 78
	factor  goto 79


state 43
	sentencia_imprimir : print . '(' CADENA ')' ';'  (78)
	sentencia_imprimir : print . '(' error ')' ';'  (79)
	sentencia_imprimir : print . '(' CADENA ';'  (80)
	sentencia_imprimir : print . CADENA ')' ';'  (81)
	sentencia_imprimir : print . error ';'  (82)

	error  shift 80
	CADENA  shift 81
	'('  shift 82
	.  error


state 44
	sentencia_iterativa : iterativo . bloque_ejecutable_iterativo  (84)

	IF  shift 29
	PRINT  shift 30
	BEGIN  shift 83
	BREAK  shift 84
	WHILE  shift 31
	ID  shift 32
	TRY  shift 33
	.  error

	sentencia_asignacion  goto 85
	sentencia_condicional  goto 86
	sentencia_imprimir  goto 87
	sentencia_iterativa  goto 88
	sentencia_try_catch  goto 89
	condicional  goto 41
	if  goto 42
	print  goto 43
	iterativo  goto 44
	bloque_ejecutable_iterativo  goto 90
	while  goto 45
	sentencia_ejecutable_iterativa  goto 91
	sentencia_break  goto 92
	bifurcacion_try  goto 46
	try  goto 47


state 45
	iterativo : while . '(' condicion ')' DO  (85)
	iterativo : while . '(' condicion ')' error  (86)
	iterativo : while . '(' error ')' DO  (87)
	iterativo : while . '(' condicion DO  (88)
	iterativo : while . condicion ')' DO  (89)

	DOUBLE  shift 66
	ID  shift 67
	CTE_ULONG  shift 68
	CTE_DOUBLE  shift 69
	CALL  shift 70
	'('  shift 93
	'-'  shift 72
	.  error

	expresion_aritmetica  goto 73
	condicion  goto 94
	sentencia_llamado_funcion  goto 75
	expresion_booleana  goto 76
	sentencia_conversion  goto 77
	termino  goto 78
	factor  goto 79


state 46
	sentencia_try_catch : bifurcacion_try . bloque_ejecutable  (104)

	BEGIN  shift 18
	.  error

	bloque_ejecutable  goto 95


state 47
	bifurcacion_try : try . sentencia_ejecutable_con_anidamiento CATCH  (105)
	bifurcacion_try : try . sentencia_ejecutable_con_anidamiento error  (106)
	bifurcacion_try : try . sentencia_ejecutable_con_anidamiento  (107)

	IF  shift 29
	PRINT  shift 30
	WHILE  shift 31
	ID  shift 32
	.  error

	sentencia_asignacion  goto 96
	sentencia_condicional  goto 97
	sentencia_imprimir  goto 98
	sentencia_iterativa  goto 99
	condicional  goto 41
	if  goto 42
	print  goto 43
	iterativo  goto 44
	while  goto 45
	sentencia_ejecutable_con_anidamiento  goto 100


state 48
	sentencias_declarativas : sentencia_declarativa ';' sentencias_declarativas .  (5)

	.  reduce 5


state 49
	cabecera_funcion : tipo error ID . '(' parametro ')'  (18)
	lista_variables : ID . ',' lista_variables  (41)
	lista_variables : ID .  (42)

	'('  shift 101
	','  shift 28
	';'  reduce 42


state 50
	sentencia_declarativa : tipo error lista_variables .  (11)

	.  reduce 11


state 51
	cabecera_funcion : tipo FUNC error . '(' parametro ')'  (19)

	'('  shift 102
	.  error


state 52
	cabecera_funcion : tipo FUNC ID . '(' parametro ')'  (17)
	cabecera_funcion : tipo FUNC ID . '(' error ')'  (20)
	cabecera_funcion : tipo FUNC ID . parametro ')'  (21)
	cabecera_funcion : tipo FUNC ID . '(' parametro  (22)

	ULONG  shift 8
	DOUBLE  shift 9
	'('  shift 103
	.  error

	tipo  goto 104
	parametro  goto 105


state 53
	sentencia_declarativa : tipo FUNC '(' . tipo ')' lista_variables  (8)
	sentencia_declarativa : tipo FUNC '(' . error ')' lista_variables  (13)
	sentencia_declarativa : tipo FUNC '(' . tipo lista_variables  (14)

	error  shift 106
	ULONG  shift 8
	DOUBLE  shift 9
	.  error

	tipo  goto 107


state 54
	sentencia_declarativa : tipo FUNC tipo . ')' lista_variables  (12)

	')'  shift 108
	.  error


state 55
	sentencia_declarativa_en_funcion : tipo lista_variables .  (27)

	.  reduce 27


state 56
	sentencia_declarativa_funcion : cabecera_funcion bloque_declarativo_funcion BEGIN . bloque_ejecutable_funcion retorno_funcion END  (15)
	sentencia_declarativa_funcion : cabecera_funcion bloque_declarativo_funcion BEGIN . bloque_ejecutable_funcion retorno_funcion postcondicion END  (16)

	IF  shift 29
	PRINT  shift 30
	WHILE  shift 31
	ID  shift 32
	TRY  shift 33
	.  error

	bloque_ejecutable_funcion  goto 109
	sentencias_ejecutables  goto 110
	sentencia_ejecutable  goto 35
	sentencia_asignacion  goto 36
	sentencia_condicional  goto 37
	sentencia_imprimir  goto 38
	sentencia_iterativa  goto 39
	sentencia_try_catch  goto 40
	condicional  goto 41
	if  goto 42
	print  goto 43
	iterativo  goto 44
	while  goto 45
	bifurcacion_try  goto 46
	try  goto 47


state 57
	sentencias_declarativas_en_funcion : sentencia_declarativa_en_funcion ';' . sentencias_declarativas_en_funcion  (25)
	sentencias_declarativas_en_funcion : sentencia_declarativa_en_funcion ';' .  (26)

	ULONG  shift 8
	DOUBLE  shift 9
	BEGIN  reduce 26

	tipo  goto 24
	sentencias_declarativas_en_funcion  goto 111
	sentencia_declarativa_en_funcion  goto 27


state 58
	lista_variables : ID ',' lista_variables .  (41)

	.  reduce 41


state 59
	sentencia_asignacion : ID error . ';'  (53)

	';'  shift 112
	.  error


state 60
	sentencia_asignacion : ID ASIG . expresion_aritmetica ';'  (52)

	DOUBLE  shift 66
	ID  shift 67
	CTE_ULONG  shift 68
	CTE_DOUBLE  shift 69
	CALL  shift 70
	'-'  shift 72
	.  error

	expresion_aritmetica  goto 113
	sentencia_llamado_funcion  goto 75
	sentencia_conversion  goto 77
	termino  goto 78
	factor  goto 79


state 61
	bloque_ejecutable : BEGIN sentencias_ejecutables END .  (43)

	.  reduce 43


state 62
	sentencias_ejecutables : sentencia_ejecutable sentencias_ejecutables .  (45)

	.  reduce 45


state 63
	bloque_ejecutable_condicional : BEGIN . sentencias_ejecutables END  (76)

	IF  shift 29
	PRINT  shift 30
	WHILE  shift 31
	ID  shift 32
	TRY  shift 33
	.  error

	sentencias_ejecutables  goto 114
	sentencia_ejecutable  goto 35
	sentencia_asignacion  goto 36
	sentencia_condicional  goto 37
	sentencia_imprimir  goto 38
	sentencia_iterativa  goto 39
	sentencia_try_catch  goto 40
	condicional  goto 41
	if  goto 42
	print  goto 43
	iterativo  goto 44
	while  goto 45
	bifurcacion_try  goto 46
	try  goto 47


state 64
	bloque_ejecutable_condicional : sentencia_ejecutable .  (77)

	.  reduce 77


state 65
	sentencia_condicional : condicional bloque_ejecutable_condicional . ENDIF ';'  (56)
	sentencia_condicional : condicional bloque_ejecutable_condicional . else bloque_ejecutable_condicional ENDIF ';'  (57)

	ELSE  shift 115
	ENDIF  shift 116
	.  error

	else  goto 117


state 66
	sentencia_conversion : DOUBLE . '(' expresion_aritmetica ')'  (102)
	sentencia_conversion : DOUBLE . '(' error ')'  (103)

	'('  shift 118
	.  error


state 67
	factor : ID .  (120)

	.  reduce 120


state 68
	factor : CTE_ULONG .  (123)

	.  reduce 123


state 69
	factor : CTE_DOUBLE .  (124)

	.  reduce 124


state 70
	sentencia_llamado_funcion : CALL . ID '(' expresion_aritmetica ')'  (54)
	sentencia_llamado_funcion : CALL . ID '(' error ')' ';'  (55)

	ID  shift 119
	.  error


state 71
	condicional : if '(' . condicion ')' THEN  (59)
	condicional : if '(' . error ')' THEN  (60)
	condicional : if '(' . condicion THEN  (61)
	condicional : if '(' . condicion ')' error ';'  (63)

	error  shift 120
	DOUBLE  shift 66
	ID  shift 67
	CTE_ULONG  shift 68
	CTE_DOUBLE  shift 69
	CALL  shift 70
	'-'  shift 72
	.  error

	expresion_aritmetica  goto 73
	condicion  goto 121
	sentencia_llamado_funcion  goto 75
	expresion_booleana  goto 76
	sentencia_conversion  goto 77
	termino  goto 78
	factor  goto 79


state 72
	termino : '-' . factor  (119)

	DOUBLE  shift 66
	ID  shift 67
	CTE_ULONG  shift 68
	CTE_DOUBLE  shift 69
	CALL  shift 70
	.  error

	sentencia_llamado_funcion  goto 75
	sentencia_conversion  goto 77
	factor  goto 122


state 73
	expresion_booleana : expresion_aritmetica . comparador expresion_aritmetica  (67)
	expresion_aritmetica : expresion_aritmetica . '+' termino  (113)
	expresion_aritmetica : expresion_aritmetica . '-' termino  (114)

	COMP_MAYOR_IGUAL  shift 123
	COMP_MENOR_IGUAL  shift 124
	COMP_IGUAL  shift 125
	COMP_DISTINTO  shift 126
	'<'  shift 127
	'>'  shift 128
	'+'  shift 129
	'-'  shift 130
	.  error

	comparador  goto 131


state 74
	condicional : if condicion . ')' THEN  (62)

	')'  shift 132
	.  error


state 75
	factor : sentencia_llamado_funcion .  (122)

	.  reduce 122


state 76
	condicion : expresion_booleana . operacion_booleana condicion  (65)
	condicion : expresion_booleana .  (66)

	AND  shift 133
	OR  shift 134
	THEN  reduce 66
	DO  reduce 66
	';'  reduce 66
	')'  reduce 66

	operacion_booleana  goto 135


state 77
	factor : sentencia_conversion .  (121)

	.  reduce 121


state 78
	expresion_aritmetica : termino .  (115)
	termino : termino . '*' factor  (116)
	termino : termino . '/' factor  (117)

	'*'  shift 136
	'/'  shift 137
	THEN  reduce 115
	DO  reduce 115
	COMP_MAYOR_IGUAL  reduce 115
	COMP_MENOR_IGUAL  reduce 115
	COMP_IGUAL  reduce 115
	AND  reduce 115
	OR  reduce 115
	COMP_DISTINTO  reduce 115
	';'  reduce 115
	')'  reduce 115
	'<'  reduce 115
	'>'  reduce 115
	'+'  reduce 115
	'-'  reduce 115


state 79
	termino : factor .  (118)

	.  reduce 118


state 80
	sentencia_imprimir : print error . ';'  (82)

	';'  shift 138
	.  error


state 81
	sentencia_imprimir : print CADENA . ')' ';'  (81)

	')'  shift 139
	.  error


state 82
	sentencia_imprimir : print '(' . CADENA ')' ';'  (78)
	sentencia_imprimir : print '(' . error ')' ';'  (79)
	sentencia_imprimir : print '(' . CADENA ';'  (80)

	error  shift 140
	CADENA  shift 141
	.  error


state 83
	bloque_ejecutable_iterativo : BEGIN . sentencias_ejecutables_iterativas END  (91)

	IF  shift 29
	PRINT  shift 30
	BREAK  shift 84
	WHILE  shift 31
	ID  shift 32
	TRY  shift 33
	.  error

	sentencia_asignacion  goto 85
	sentencia_condicional  goto 86
	sentencia_imprimir  goto 87
	sentencia_iterativa  goto 88
	sentencia_try_catch  goto 89
	condicional  goto 41
	if  goto 42
	print  goto 43
	iterativo  goto 44
	while  goto 45
	sentencias_ejecutables_iterativas  goto 142
	sentencia_ejecutable_iterativa  goto 143
	sentencia_break  goto 92
	bifurcacion_try  goto 46
	try  goto 47


state 84
	sentencia_break : BREAK . ';'  (101)

	';'  shift 144
	.  error


state 85
	sentencia_ejecutable_iterativa : sentencia_asignacion .  (95)

	.  reduce 95


state 86
	sentencia_ejecutable_iterativa : sentencia_condicional .  (96)

	.  reduce 96


state 87
	sentencia_ejecutable_iterativa : sentencia_imprimir .  (97)

	.  reduce 97


state 88
	sentencia_ejecutable_iterativa : sentencia_iterativa .  (98)

	.  reduce 98


state 89
	sentencia_ejecutable_iterativa : sentencia_try_catch .  (99)

	.  reduce 99


state 90
	sentencia_iterativa : iterativo bloque_ejecutable_iterativo .  (84)

	.  reduce 84


state 91
	bloque_ejecutable_iterativo : sentencia_ejecutable_iterativa .  (92)

	.  reduce 92


state 92
	sentencia_ejecutable_iterativa : sentencia_break .  (100)

	.  reduce 100


state 93
	iterativo : while '(' . condicion ')' DO  (85)
	iterativo : while '(' . condicion ')' error  (86)
	iterativo : while '(' . error ')' DO  (87)
	iterativo : while '(' . condicion DO  (88)

	error  shift 145
	DOUBLE  shift 66
	ID  shift 67
	CTE_ULONG  shift 68
	CTE_DOUBLE  shift 69
	CALL  shift 70
	'-'  shift 72
	.  error

	expresion_aritmetica  goto 73
	condicion  goto 146
	sentencia_llamado_funcion  goto 75
	expresion_booleana  goto 76
	sentencia_conversion  goto 77
	termino  goto 78
	factor  goto 79


state 94
	iterativo : while condicion . ')' DO  (89)

	')'  shift 147
	.  error


state 95
	sentencia_try_catch : bifurcacion_try bloque_ejecutable .  (104)

	.  reduce 104


state 96
	sentencia_ejecutable_con_anidamiento : sentencia_asignacion .  (109)

	.  reduce 109


state 97
	sentencia_ejecutable_con_anidamiento : sentencia_condicional .  (110)

	.  reduce 110


state 98
	sentencia_ejecutable_con_anidamiento : sentencia_imprimir .  (111)

	.  reduce 111


state 99
	sentencia_ejecutable_con_anidamiento : sentencia_iterativa .  (112)

	.  reduce 112


state 100
	bifurcacion_try : try sentencia_ejecutable_con_anidamiento . CATCH  (105)
	bifurcacion_try : try sentencia_ejecutable_con_anidamiento . error  (106)
	bifurcacion_try : try sentencia_ejecutable_con_anidamiento .  (107)

	error  shift 148
	CATCH  shift 149
	BEGIN  reduce 107


state 101
	cabecera_funcion : tipo error ID '(' . parametro ')'  (18)

	ULONG  shift 8
	DOUBLE  shift 9
	.  error

	tipo  goto 104
	parametro  goto 150


state 102
	cabecera_funcion : tipo FUNC error '(' . parametro ')'  (19)

	ULONG  shift 8
	DOUBLE  shift 9
	.  error

	tipo  goto 104
	parametro  goto 151


state 103
	cabecera_funcion : tipo FUNC ID '(' . parametro ')'  (17)
	cabecera_funcion : tipo FUNC ID '(' . error ')'  (20)
	cabecera_funcion : tipo FUNC ID '(' . parametro  (22)

	error  shift 152
	ULONG  shift 8
	DOUBLE  shift 9
	.  error

	tipo  goto 104
	parametro  goto 153


state 104
	parametro : tipo . ID  (23)

	ID  shift 154
	.  error


state 105
	cabecera_funcion : tipo FUNC ID parametro . ')'  (21)

	')'  shift 155
	.  error


state 106
	sentencia_declarativa : tipo FUNC '(' error . ')' lista_variables  (13)

	')'  shift 156
	.  error


state 107
	sentencia_declarativa : tipo FUNC '(' tipo . ')' lista_variables  (8)
	sentencia_declarativa : tipo FUNC '(' tipo . lista_variables  (14)

	ID  shift 16
	')'  shift 157
	.  error

	lista_variables  goto 158


state 108
	sentencia_declarativa : tipo FUNC tipo ')' . lista_variables  (12)

	ID  shift 16
	.  error

	lista_variables  goto 159


state 109
	sentencia_declarativa_funcion : cabecera_funcion bloque_declarativo_funcion BEGIN bloque_ejecutable_funcion . retorno_funcion END  (15)
	sentencia_declarativa_funcion : cabecera_funcion bloque_declarativo_funcion BEGIN bloque_ejecutable_funcion . retorno_funcion postcondicion END  (16)

	error  shift 160
	RETURN  shift 161
	.  error

	retorno_funcion  goto 162


state 110
	bloque_ejecutable_funcion : sentencias_ejecutables .  (44)

	.  reduce 44


state 111
	sentencias_declarativas_en_funcion : sentencia_declarativa_en_funcion ';' sentencias_declarativas_en_funcion .  (25)

	.  reduce 25


state 112
	sentencia_asignacion : ID error ';' .  (53)

	.  reduce 53


state 113
	sentencia_asignacion : ID ASIG expresion_aritmetica . ';'  (52)
	expresion_aritmetica : expresion_aritmetica . '+' termino  (113)
	expresion_aritmetica : expresion_aritmetica . '-' termino  (114)
